--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -25890,5 +25890,25 @@ cette violente opération...]]></target>
         <target><![CDATA[Vous ne pouvez pas envoyer un <strong>message vide</strong> ou un message avec un <strong>titre vide</strong>...]]></target>
       </segment>
     </unit>
+    <unit id="O.lyccv" name="Materialienverbrauch ansehen">
+      <notes>
+        <note category="german">Materialienverbrauch ansehen</note>
+        <note category="from">twig:///templates/ajax/game/town/construction.html.twig</note>
+      </notes>
+      <segment>
+        <source>Materialienverbrauch ansehen</source>
+        <target>Voir seulement les matériaux manquants</target>
+      </segment>
+    </unit>
+    <unit id="83UNHAB" name="Normale Ansicht">
+      <notes>
+        <note category="german">Normale Ansicht</note>
+        <note category="from">twig:///templates/ajax/game/town/construction.html.twig</note>
+      </notes>
+      <segment>
+        <source>Normale Ansicht</source>
+        <target>Vue normale</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
