ES home text + #1737 translations

--- a/translations/help+intl-icu.es.xlf
+++ b/translations/help+intl-icu.es.xlf
@@ -7666,7 +7666,7 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
       </notes>
       <segment>
         <source>Alle deine Gegenstände werden &lt;strong&gt;in der Truhe&lt;/strong&gt; aufbewahrt. Klick auf einen &lt;strong&gt;Gegenstand&lt;/strong&gt;, um ihn mitzunehmen...</source>
-        <target><![CDATA[Alle deine Gegenstände werden <strong>in der Truhe</strong> aufbewahrt. Klick auf einen <strong>Gegenstand</strong>, um ihn mitzunehmen...]]></target>
+        <target><![CDATA[Has depositado todos tus objetos en <strong>tu baúl personal</strong>. Haz clic en cualquier <strong>objeto</strong para llevarlo contigo...]]></target>
       </segment>
     </unit>
     <unit id="K56xxmf">
@@ -8623,8 +8623,8 @@ Um Kontakt mit den Administratoren aufzunehmen, schreibe an die &lt;a x-group-co
       <segment>
         <source>&lt;strong&gt;DEN SUPPORT KONTAKTIEREN:&lt;/strong&gt;
 Um Kontakt mit den Administratoren aufzunehmen, schreibe an die &lt;a x-group-connect="{oglink}" href="#"&gt;Offizielle Gruppe&lt;/a&gt; des Technischen Supports.</source>
-        <target><![CDATA[<strong>DEN SUPPORT KONTAKTIEREN:</strong>
-Um Kontakt mit den Administratoren aufzunehmen, schreibe an die <a x-group-connect="{oglink}" href="#">Offizielle Gruppe</a> des Technischen Supports.]]></target>
+        <target><![CDATA[<strong>CONTACTA AL SOPORTE:</strong>
+Para ponerte en contacto con los administadores, escribe al <a x-group-connect="{oglink}" href="#">Grupo Oficial</a> de Soporte técnico.]]></target>
       </segment>
     </unit>
   </file>
