ES logout message translation

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4275,7 +4275,7 @@
       </notes>
       <segment>
         <source>Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!</source>
-        <target>Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!</target>
+        <target>¡Recuerda, también debes cerrar sesión en tu cuenta de Eternaltwin!</target>
       </segment>
     </unit>
   </file>
