--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -2620,7 +2620,7 @@
       </notes>
       <segment>
         <source>Wenn du der Meinung bist, fälschlicherweise gesperrt worden zu sein, kannst du dich im Weltforum melden.</source>
-        <target>Si tu penses avoir été banni à tort, tu peux te rendre dans le Nid des corbeaux (en bas de la page des forums).</target>
+        <target>Si vous pensez avoir été banni à tort, vous pouvez vous rendre dans le Nid des corbeaux (en bas de la page des forums).</target>
       </segment>
     </unit>
     <unit id="PBVB79s" name="Dein Account ist eingeschränkt!">
@@ -4306,7 +4306,7 @@
       </notes>
       <segment>
         <source>Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!</source>
-        <target>Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!</target>
+        <target>N’oubliez pas de vous déconnecter également de votre compte EternalTwin !</target>
       </segment>
     </unit>
   </file>
