FR Translation for error message when chest + rucksack full

--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9445,7 +9445,7 @@
       </notes>
       <segment>
         <source>Hierfür hast du keinen Platz.</source>
-        <target>Hierfür hast du keinen Platz.</target>
+        <target>Vous n'avez pas de place pour ça.</target>
       </segment>
     </unit>
   </file>
