ES show buildings button translation

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23739,7 +23739,7 @@
       </notes>
       <segment>
         <source>Gebäudeliste einblenden</source>
-        <target>Gebäudeliste einblenden</target>
+        <target>Mostrar construcciones</target>
       </segment>
     </unit>
     <unit id="tn37OGR">
