ES e-mail change translation

--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -861,7 +861,7 @@
       </notes>
       <segment>
         <source>Deine E-Mail-Adresse wurde erfolgreich geändert.</source>
-        <target>Deine E-Mail-Adresse wurde erfolgreich geändert.</target>
+        <target>Has cambiado tu correo electrónico correctamente.</target>
       </segment>
     </unit>
   </file>
